--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -6,7 +6,7 @@
 
 .summaryTitleCol{
     float: left;
-    padding: 20px;
+    padding: 15px;
     font-size: 1.9em;
     color: white;
 }
@@ -27,8 +27,7 @@
     height: 300px;
 }
 .chartRow{
-    padding: 20px;
-    float: left;
+    /* float: left; */
 }
 
 .sumChartSquare{
