--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -1,6 +1,6 @@
 .switchCol{
     float: right;
-    color: white;
+    color: #383838;
 }
 
 .summaryTitleCol{
@@ -15,10 +15,12 @@
 .financialsLabel {
     padding: 5px, 5px, 5px, 5px;
     margin-right: 5px;
+    color: white;
 }
 .journeysLabel{
     padding: 5px, 5px, 5px, 5px;
     margin-left: 5px;
+    color: white;
 
 
 }
