--- a/src/components/FilterBox/FilterBox.css
+++ b/src/components/FilterBox/FilterBox.css
@@ -1,8 +1,8 @@
 .filterContainer {
-    background-color: grey;
+    background-color: rgb(66, 66, 66);
     padding: 10px;
 }
 
 .multiSelect {
-    background-color: grey;
+    background-color:rgb(66, 66, 66);
 }
