--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -1,3 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Varela+Round');
+* {
+    font-family: 'Varela Round', sans-serif;
+}
+
 .switchCol{
     float: right;
     color: #383838;
