--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -47,13 +47,6 @@
     border: 2px solid red !important;
 }
 
-/* 4 Charts */
-chart1:hover{
-    position: relative;
-	background: white;
-    border-bottom: 5px solid #3a3a3a;
-    height: 270px;
-}
 /* Arrow */
 
 .arrow_box {
@@ -114,7 +107,7 @@ chart1:hover{
 	}
 
 .flip-container, .front, .back {
-	width: 320px;
+	width: 100%;
 	height: 480px;
 }
 
