--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -4,7 +4,6 @@
 
 .navText {
     font-size: 1.2em; 
-    /* color: black; */
 }
 
 .navText:hover {
@@ -22,22 +21,23 @@
 }
 
 .navItem{
-    margin-top: 2px;
+    margin-top: 5px;
     padding-left: 5px;
     padding-right:5px;
     margin-left: 5px;
     margin-right: 5px;
-    padding-bottom: 5px;
-    border: 4px solid transparent;
+    padding-bottom: 20px;
+    /* border: 4px solid transparent; */
 }
 
 .dropDownContainer {
-    margin-top: 5px;
+    margin-top: 9px;
     padding-bottom: 20px;
     font-size: 1.2em; 
     /* color: black; */
 }
 
 .selected {
-    border-bottom: 5px solid red;
+    border-bottom: solid red;
+    border-bottom-width: thick;
 }
