Fixing filter animations

--- a/src/components/CustomDropDownPanel/CustomDropDownPanel.css
+++ b/src/components/CustomDropDownPanel/CustomDropDownPanel.css
@@ -1,28 +1,59 @@
 
 
-.example-appear {
+.ddFilter-appear {
     opacity: 0;
-    transform: translateY(-200px);
+    transform: translateX(-200px);
     animation-duration: 4s;
     animation-delay: 2s;
 }
   
-.example-appear.example-appear-active {
+.ddFilter-appear.ddFilter-appear-active {
     opacity: 1;
     transform: translateY(0px);
     transition: all 1s ease-out;
     animation-duration: 100s;
     animation-delay: 5s;
 }
-.example-leave {
-    opacity: 1;
+.ddFilter-leave {
+    opacity: 0;
+    transform: translateX(200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
   }
   
-  .example-leave.example-leave-active {
+  .ddFilter-leave .ddFilter-leave-active {
     opacity: 0.01;
     transition: opacity 300ms ease-in;
   }
 
+
+
+
+  
+.ddFilter-enter {
+    opacity: 0.01;
+    transform: translateX(-200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
+  }
+  .ddFilter-enter-active {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s ease-out;
+    animation-duration: 100s;
+    animation-delay: 5s;
+  
+  }
+  .ddFilter-exit {
+    opacity: 0;
+    transform: translateX(200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
+  }
+  .ddFilter-exit-active {
+    opacity: 0.01;
+    transition: opacity 300ms ease-in;
+  }
 .panelBarContainer{
     height: 0;
     width: 100%;
@@ -35,17 +66,13 @@
 .panelBarContainer-open{
     color: white;
     background-color: #3c3c3c;
-
     height: 150px;
     padding: 20px;
-
-
 }
 
 .panelBarContainer-closed{
     height: 0px;
     display: none;
-
 }
 
 .quarterFilterContainer{
