--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -27,17 +27,15 @@
     margin-left: 5px;
     margin-right: 5px;
     padding-bottom: 20px;
-    /* border: 4px solid transparent; */
+    /* border: 4px solid red; */
 }
 
 .dropDownContainer {
     margin-top: 9px;
     padding-bottom: 20px;
     font-size: 1.2em; 
-    /* color: black; */
 }
 
 .selected {
-    border-bottom: solid red;
-    border-bottom-width: thick;
+    border-bottom: 5px solid red;
 }
