Added available filters to state, and the drop down panels now have valid filter values

--- a/src/components/FilterBox/FilterBox.css
+++ b/src/components/FilterBox/FilterBox.css
@@ -27,10 +27,10 @@ expandBox{
  
 }
 
-.xButton{
+/* .xButton{
     padding-left: 15px;
     font-size: 1.5em;
-}
+} */
 
 .newFilterDiv{
     float: right;
