--- a/src/components/FilterPillBox/FilterPillBox.css
+++ b/src/components/FilterPillBox/FilterPillBox.css
@@ -7,7 +7,9 @@
     border: 1px solid #ffffff;
     border-radius: 20px;
     padding: 10px;
+    margin-top:40px;
     width: inherit;
+    margin-right: 10px;
 
 }
 .filterText, .xButton{
