--- a/src/components/FilterPillBox/FilterPillBox.css
+++ b/src/components/FilterPillBox/FilterPillBox.css
@@ -23,3 +23,20 @@
     font-size: 1.5em;
 }
 
+
+/* Animation */
+
+.example-appear {
+    opacity: 0;
+    transform: translateY(-200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
+}
+  
+.example-appear.example-appear-active {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s ease-out;
+    animation-duration: 100s;
+    animation-delay: 5s;
+}
