Added user icon logo to navbar

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -6,6 +6,10 @@
     font-size: 1.2em; 
 }
 
+.userIcon {
+    padding-top: 17px;
+    width: 25px;
+}
 .navText:hover {
     color: gray !important;
 }
@@ -31,11 +35,32 @@
 }
 
 .dropDownContainer {
-    margin-top: 9px;
+    padding-right: 10px;
+    margin-top: 18px;
     padding-bottom: 20px;
     font-size: 1.2em; 
+
+}
+
+.dropDownContainerBox {
+    margin-right: 7px;
 }
 
 .selected {
     border-bottom: 5px solid red;
+}
+
+#nav-dropdown {
+    color: rgb(46, 46, 46);
+    text-decoration: none;
+}
+    
+#nav-dropdown:hover {
+    color:#00A0C6; 
+    text-decoration:none; 
+    cursor:pointer;  
+}
+
+#nav-dropdown::after {
+    display:none;
 }
