pushing for debug assistance on adding and removing a filter

--- a/src/components/FilterBox/FilterBox.css
+++ b/src/components/FilterBox/FilterBox.css
@@ -7,6 +7,10 @@
     height: 50px;
   
 }
+.pillsContainer{
+    overflow: wrap;
+    float:left;
+}
 expandBox{
     height: 100%;
     width: 100%;
