--- a/src/Views/App.css
+++ b/src/Views/App.css
@@ -3,3 +3,21 @@
     background-color: #e8e8e8;
     height: 100%;
 }
+
+
+/* Animation */
+
+.example-appear {
+    opacity: 0;
+    transform: translateY(-200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
+}
+  
+.example-appear.example-appear-active {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s ease-out;
+    animation-duration: 100s;
+    animation-delay: 5s;
+}
