--- a/src/components/TopSummaryBox/TopSummaryBox.css
+++ b/src/components/TopSummaryBox/TopSummaryBox.css
@@ -35,7 +35,7 @@
 .gridContainer{
     background-color: #1F1F1F;
     /* background-image: linear-gradient(rgb(68, 68, 68),rgb(62, 62, 62),rgb(16, 16, 16)); */
-	padding-top: 30px;
+	/* padding-top: 30px; */
 	padding-bottom: 400px;
     height: 390px;
 }
