--- a/src/components/BottomSummaryBox/ButtomSummaryBox.css
+++ b/src/components/BottomSummaryBox/ButtomSummaryBox.css
@@ -32,7 +32,7 @@ padding-bottom: 50px;
     margin-right: 20px;
     margin-left: 20px;
     margin-top: 100px;
-    }
+}
 
 .red{
     color: red;
@@ -56,4 +56,63 @@ padding-bottom: 50px;
     font-size: 16px;
     line-height: 16px;
 
+}
+
+
+.example-appear {
+    opacity: 0;
+    transform: translateY(-200px);
+    animation-duration: 4s;
+    animation-delay: 2s;
+}
+  
+.example-appear.example-appear-active {
+    opacity: 1;
+    transform: translateY(0px);
+    transition: all 1s ease-out;
+    animation-duration: 100s;
+    animation-delay: 5s;
+}
+
+
+  
+.chartBig {
+    /* background-color: white; */
+    /* width: 1330px;
+    position: absolute; */
+}
+.over {
+  background: #e8e8e8;
+  float: left;
+  height: 350px;
+  width:auto;
+  margin-top: -403px;
+  margin-left: 71px;
+  overflow: visible;
+  /* position: relative; */
+  width: 1500px;
+  color: #FFFFFF;
+
+
+  -webkit-animation: mover 4s ease-in-out forwards;
+  -moz-animation: mover 4s ease-in-out forwards;
+  -o-animation: mover 4s ease-in-out forwards;
+  animation: mover 4s ease-in-out forwards;
+}
+
+@-webkit-keyframes mover {
+    0% { -webkit-transform: translateX(0); }
+    100% { -webkit-transform: translateX(1500px); }
+} 
+@-moz-keyframes mover {
+    0% { -moz-transform: translateX(0); }
+    100% { -moz-transform: translateX(1500px); }
+} 
+@-o-keyframes mover {
+    0% { -o-transform: translateX(0); }
+    100% { -o-transform: translateX(1500px); }
+} 
+@keyframes mover {
+    0% { transform: translateX(0); }
+    100% { transform: translateX(1500px); }
 }
