--- a/src/components/BottomSummaryBox/ButtomSummaryBox.css
+++ b/src/components/BottomSummaryBox/ButtomSummaryBox.css
@@ -10,10 +10,16 @@
     margin-left: 20px;
     margin-top: 100px;
 }
-.titleHeader {
+.summaryTitleHeader {
     background-color:#e8e8e8;
     height: 40px;
     font-size: 1.9em;
+}
+.journeyTitleHeader {
+    background-color:#1F1F1F;
+    height: 40px;
+    font-size: 1.9em;
+    color:white;
 }
 
 /* Animation */
