--- a/src/components/BottomSummaryBox/ButtomSummaryBox.css
+++ b/src/components/BottomSummaryBox/ButtomSummaryBox.css
@@ -112,3 +112,11 @@
     0% { transform: translateX(0); }
     100% { transform: translateX(1500px); }
 }
+
+.journeyStatsContainer{
+    color: white;
+    font-size:1.4em;
+    margin-left: 20px;
+    padding-top:80px;
+    border-top: 1px solid grey;
+}
