--- a/src/components/BottomSummaryBox/ButtomSummaryBox.css
+++ b/src/components/BottomSummaryBox/ButtomSummaryBox.css
@@ -117,6 +117,15 @@
     color: white;
     font-size:1.4em;
     margin-left: 20px;
-    padding-top:80px;
+    padding-top:60px;
     border-top: 1px solid grey;
+}
+
+.darkGrey{
+    background-color: #f4f4f4;
+}
+.horizontalRule{
+    height:1px;
+    width:100%;
+    margin-bottom: 20px;
 }
